# gitbook-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
gitbook_scraper/: __init__.py  cli.py  exceptions.py  scraper.py
tests/: conftest.py  test_cli.py  test_navigation_extraction_debug.py  test_scraper.py
